cabal-version:   3.0
name:            y2019
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn
build-type:      Simple

common base
    default-language: GHC2021
    build-depends:    base, aoc-lib

executable day-1
    import:           base
    main-is:          day-1.hs
