cabal-version:   3.0
name:            y2023
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn
build-type:      Simple

common base
    default-language: GHC2021
    default-extensions: LambdaCase
    build-depends:    base, aoc-lib, extra

executable day-1
    import:           base
    main-is:          day-1.hs
executable day-2
    import:           base
    build-depends:    megaparsec, parser-combinators
    main-is:          day-2.hs
