cabal-version:   3.0
name:            y2023
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn
build-type:      Simple

common base
    default-language: GHC2021
    default-extensions: LambdaCase, BlockArguments
    build-depends:    base, aoc-lib, extra
    ghc-options: -threaded

executable day-1
    import:           base
    main-is:          day-1.hs

executable day-2
    import:           base
    build-depends:    megaparsec, parser-combinators
    main-is:          day-2.hs

executable day-3
    import:           base
    build-depends:    containers, search-algorithms, transformers
    main-is:          day-3.hs

executable day-4
    import:           base
    build-depends:    containers, search-algorithms, transformers
    main-is:          day-4-scratchcards.hs

executable day-5
    import:           base
    main-is:          day-5-garden.hs

executable day-6
    import:           base
    main-is:          day-6-boat-races.hs

executable day-7
    import:           base
    main-is:          day-7-cards.hs

executable day-8
    import:           base
    build-depends:    containers
    main-is:          day-8-maps.hs

executable day-9
    import:           base
    main-is:          day-9-histories.hs

executable day-10
    import:           base
    build-depends:    containers
    main-is:          day-10-pipes.hs
