cabal-version:   3.0
name:            y2024
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn
build-type:      Simple

common base
    default-language: GHC2021
    default-extensions: LambdaCase, BlockArguments, LexicalNegation
    build-depends:    base, aoc-lib, extra
    ghc-options: -threaded

executable day-1
    import:           base
    build-depends:    containers
    main-is:          day-1-pairs.hs

executable day-2
    import:           base
    main-is:          day-2.hs

executable day-3
    import:           base
    build-depends:    regex-tdfa
    main-is:          day-3.hs

executable day-4
    import:           base
    main-is:          day-4.hs

executable day-7
    import:           base
    main-is:          day-7.hs

executable day-11
    import:           base
    main-is:          day-11.hs
