cabal-version:   3.8
name:            Day13
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn

common warnings
    ghc-options: -Wall

executable Day13
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , aoc-lib
    hs-source-dirs:   .
    default-language: Haskell2010
